--- a/BMICalculator.html
+++ b/BMICalculator.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced BMI Calculator</title>
     <style>
+
+body {
+    margin: 0; /* Removes default browser margin */
+    background-color: #f0f2f5; /* A light background for the whole page */
+}
+.site-header {
+    background-color: #343a40;
+    padding: 1rem 0;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 2rem;
+}
+.site-header .site-title {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             line-height: 1.6;
@@ -112,6 +131,10 @@
     </style>
 </head>
 <body>
+
+<header class="site-header">
+    <a href="index.html" class="site-title">MedCalculator</a>
+</header>
 
     <div class="calculator">
         <h2>BMI Calculator</h2>
