--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MedCalculator - Home</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            background-color: #f0f2f5;
+        }
+        .site-header {
+            background-color: #343a40;
+            padding: 1rem 0;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
+        }
+        .site-header .site-title {
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 1rem 2rem 1rem;
+        }
+        .page-title {
+            text-align: center;
+            font-size: 2rem;
+            margin-bottom: 2rem;
+            color: #495057;
+        }
+        .calculator-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+        }
+        .calculator-card {
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 2rem; /* Increased padding for better vertical space */
+            text-decoration: none;
+            color: inherit;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+        .calculator-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        }
+        .calculator-card h3 {
+            margin: 0;
+            font-size: 1.25rem;
+            color: #007bff;
+        }
+    </style>
+</head>
+<body>
 
+    <header class="site-header">
+        <a href="index.html" class="site-title">MedCalculator</a>
+    </header>
+
+    <main class="container">
+        <h1 class="page-title">Available Medical Calculators</h1>
+
+        <div class="calculator-grid">
+            <a href= "PregnancyDateCalculator.html" class="calculator-card">
+                <h3>Pregnancy Due Date Calculator</h3>
+            </a>
+            
+            <a href="BMICalculator.html" class="calculator-card">
+                <h3>BMI Calculator</h3>
+            </a>
+
+            <a href="BodySurfaceAreaCalculator.html" class="calculator-card">
+                <h3>Body Surface Area (BSA) Calculator</h3>
+            </a>
+
+            <a href="HypertensionClassifierBP.html" class="calculator-card">
+                <h3>Hypertension Classifier</h3>
+            </a>
+
+            <a href="MeanArterialPressureCalculator.html" class="calculator-card">
+                <h3>Mean Arterial Pressure (MAP) Calculator</h3>
+            </a>
+            
+
+        </div>
+    </main>
+
+</body>
+</html>
