--- a/PregnancyDateCalculator.html
+++ b/PregnancyDateCalculator.html
@@ -97,8 +97,8 @@
             <div id="results" style="display:none;">
                 <h3>Results:</h3>
                 <p><strong>Expected Date of Delivery (EDD):</strong> <span id="edd"></span></p>
-                <p><strong>Period of Amenorrhea on <span id="displayCheckDate"></span>:</strong> <span id="weeksPregnant"></span></p>
-                <p><strong>Days Remaining from <span id="displayCheckDateAgain"></span>:</strong> <span id="daysLeft"></span></p>
+                <p><strong>Period of Amenorrhea: </strong> <span id="weeksPregnant"></span> as of <span id="displayCheckDate"></span></p>
+                <p><strong>Remaining days:</strong> <span id="daysLeft"></span> from <span id="displayCheckDateAgain"></span></p>
             </div>
         </div>
     </div>
