--- a/BodySurfaceAreaCalculator.html
+++ b/BodySurfaceAreaCalculator.html
@@ -3,106 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Body Surface Area (BSA) Calculator</title>
+    <title>We've Moved! - MedCalculator</title>
+    
+    <!-- This meta tag is a fallback for browsers with JavaScript disabled -->
+    <meta http-equiv="refresh" content="5; url=https://medcalculator.pages.dev/">
+    
     <style>
-body {
-    margin: 0; /* Removes default browser margin */
-    background-color: #f0f2f5; /* A light background for the whole page */
-}
-.site-header {
-    background-color: #343a40;
-    padding: 1rem 0;
-    text-align: center;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    margin-bottom: 2rem;
-}
-.site-header .site-title {
-    color: white;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-        .calculator {
-            background: #f9f9f9;
-            padding: 2rem;
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f0f2f5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        .redirect-container {
+            background: #ffffff;
+            padding: 2.5rem 3rem;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            max-width: 500px;
         }
-        label {
-            display: block;
-            margin-bottom: .5rem;
+        h1 {
+            font-size: 2rem;
+            color: #343a40;
+            margin-top: 0;
+        }
+        p {
+            font-size: 1.1rem;
+            color: #6c757d;
+        }
+        .new-link {
             font-weight: bold;
+            color: #007bff;
+            text-decoration: none;
         }
-        input[type="number"] {
-            width: 100%;
-            padding: .5rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            margin-bottom: 1rem;
+        .new-link:hover {
+            text-decoration: underline;
         }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: .75rem 1.5rem;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+        .countdown-text {
+            margin-top: 1.5rem;
             font-size: 1rem;
         }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #results {
-            margin-top: 1.5rem;
-            padding: 1rem;
-            background: #e9ecef;
-            border-radius: 4px;
+        #countdown {
+            font-weight: bold;
+            font-size: 1.2rem;
         }
     </style>
 </head>
 <body>
 
-<header class="site-header">
-    <a href="index.html" class="site-title">MedCalculator</a>
-</header>
-
-    <div class="calculator">
-        <h2>Body Surface Area (BSA) Calculator</h2>
-        <form onsubmit="event.preventDefault(); calculateBSA();">
-            <label for="weight">Weight (kg):</label>
-            <input type="number" id="weight" step="0.1" placeholder="Enter weight in kilograms" required>
-
-            <button type="submit">Calculate</button>
-        </form>
-
-        <div id="results" style="display:none;">
-            <h3>Result:</h3>
-            <p><strong>Body Surface Area:</strong> <span id="bsa-value"></span> m²</p>
-        </div>
+    <div class="redirect-container">
+        <h1>We've Moved!</h1>
+        <p>
+            Our website has a new home. If you are not redirected automatically, please click the link below:
+        </p>
+        <p>
+            <a href="https://medcalculator.pages.dev/" class="new-link">https://medcalculator.pages.dev/</a>
+        </p>
+        <p class="countdown-text">
+            Redirecting in <span id="countdown">5</span> seconds...
+        </p>
     </div>
 
     <script>
-        function calculateBSA() {
-            const weightInput = document.getElementById('weight');
-            const resultsDiv = document.getElementById('results');
-            const bsaValueSpan = document.getElementById('bsa-value');
+        (function() {
+            // --- Configuration ---
+            const newUrl = "https://medcalculator.pages.dev/";
+            let secondsLeft = 5; // The countdown time in seconds
 
-            if (weightInput.value) {
-                const weight = parseFloat(weightInput.value);
+            // --- Elements ---
+            const countdownElement = document.getElementById('countdown');
 
-                if (weight > 0) {
-                    // This formula is based on the provided source file: BSA = (Weight * 4 + 7) / (Weight + 90)
-                    const body_surface_area = (weight * 4 + 7) / (weight + 90);
+            // --- Logic ---
+            // Function to perform the redirect
+            const redirectToNewSite = () => {
+                window.location.href = newUrl;
+            };
 
-                    // Display the result with 3 decimal places
-                    bsaValueSpan.textContent = body_surface_area.toFixed(3);
-                    resultsDiv.style.display = 'block';
-                } else {
-                    alert("Please enter a valid weight greater than 0.");
+            // Set the main timer for the redirection
+            setTimeout(redirectToNewSite, secondsLeft * 1000);
+
+            // Set an interval to update the countdown display every second
+            const countdownInterval = setInterval(() => {
+                secondsLeft--;
+                if (countdownElement) {
+                    countdownElement.textContent = secondsLeft;
                 }
-            }
-        }
+                // Stop the interval when it reaches 0
+                if (secondsLeft <= 0) {
+                    clearInterval(countdownInterval);
+                }
+            }, 1000);
+        })();
     </script>
 
 </body>
