--- a/PregnancyDateCalculator.html
+++ b/PregnancyDateCalculator.html
@@ -63,7 +63,7 @@
             Our website has a new home. If you are not redirected automatically, please click the link below:
         </p>
         <p>
-            <a href="https://medcalculator.pages.dev/PregnancyDateCalculator" class="new-link">https://medcalculator.pages.dev/PregnancyDateCalculator</a>
+            <a href="https://medcalculator.pages.dev/PregnancyDateCalculator" class="new-link">https://medcalculator.pages.dev/</a>
         </p>
         <p class="countdown-text">
             Redirecting in <span id="countdown">5</span> seconds...
